lib/registry/ingress-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: "true"
  name: docker-registry
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "%REGISTRY_HOST%"
      secretName: registry-tls
  rules:
    - host: "%REGISTRY_HOST%"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
